[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Kami.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Kami.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 10.5 )

[node name="Kami" type="KinematicBody2D" groups=["KAMI"]]
show_behind_parent = true
collision_layer = 4
collision_mask = 18
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
modulate = Color( 1, 0.0509804, 0.941176, 1 )
position = Vector2( 0, -0.5 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
